Sun Oct  9 00:16:25 BST 2011  Colin Watson  <cjwatson@debian.org>

	* NEWS: Update.

Sat Oct  8 23:34:26 BST 2011  Colin Watson  <cjwatson@debian.org>

	Convert the German manual pages translation to po4a.

	* man/po4a/po/de.po: New from Translation Project (thanks, Martin
	  Eberhard Schauer).
	* man/LINGUAS: Remove de.
	* man/LINGUAS.po4a: Add de.
	* man/de/man1, man/de/man5, man/de/man8: Remove.
	* man/de/Makefile.am (PO4A_LINGUA): Set to yes.
	  (EXTRA_DIST): Add translator.add.
	  (man1_MANS): Add man1/lexgrog.1 and man1/manconv.1.
	* man/po4a/Makefile.am (POFILES): Add po/de.po.
	* man/po4a/po4a.cfg (po4a_langs): Add de.
	* man/THANKS: Credit Martin Schauer with man/de as well as de.po.
	* .bzrignore: Add man/de/man1, man/de/man5, and man/de/man8.

Sat Oct  8 17:11:08 BST 2011  Yasuaki Taniguchi  <yasuakit@gmail.com>

	* po/ja.po: Update from Translation Project.

Sat Oct  8 17:09:41 BST 2011  Colin Watson  <cjwatson@debian.org>

	* man/THANKS: Consolidate duplicated credit.

Sat Oct  8 17:07:17 BST 2011  Colin Watson  <cjwatson@debian.org>

	Convert the Japanese manual pages translation to po4a.

	* man/po4a/po/ja.po: New from Translation Project (thanks, Yasuaki
	  Taniguchi).
	* man/LINGUAS: Remove ja.
	* man/LINGUAS.po4a: Add ja.
	* man/ja/man1, man/ja/man5, man/ja/man8: Remove.
	* man/ja/Makefile.am (PO4A_LINGUA): Set to yes.
	  (EXTRA_DIST): Add translator.add.
	  (man1_MANS): Add man1/lexgrog.1 and man1/manconv.1.
	* man/po4a/Makefile.am (POFILES): Add po/ja.po.
	* man/po4a/po4a.cfg (po4a_langs): Add ja.
	* man/THANKS: Add Yasuaki Taniguchi.
	* .bzrignore: Add man/ja/man1, man/ja/man5, and man/ja/man8.

Sun Sep 18 18:28:37 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/tests/mandb-5: Make executable.

Sat Sep 17 13:28:33 BST 2011  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Revision control): man-db's Bazaar repository now
	  requires bzr 1.16 or later.

Mon Sep  5 11:29:53 BST 2011  Colin Watson  <cjwatson@debian.org>
