@@ -14,6 +14,9 @@ Major changes since man-db 2.6.0.2:
 	o straycats tries to ensure that col is invoked with LC_CTYPE set to
 	  a UTF-8 locale.
 
+	o Fix double-free in mandb when encountering a symlink outside the
+	  manual hierarchy, thanks to Peter Schiffer.
+
 	Improvements:
 	-------------
 
